<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C3E3E"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/showProductListButton"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="158dp"
        android:layout_height="114dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="#241111"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/current_resources_button"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/showRecipesButton"
        app:layout_constraintEnd_toStartOf="@+id/showRecipesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showMenuButton"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="158dp"
        android:layout_height="114dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:background="#241111"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/menu_button"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteProductsButton"
        app:layout_constraintEnd_toStartOf="@+id/shoppingListButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showProductListButton" />

    <Button
        android:id="@+id/deleteProductsButton"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="158dp"
        android:layout_height="114dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:background="#241111"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/remove_some_product_button"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addRecipeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMenuButton" />

    <Button
        android:id="@+id/showRecipesButton"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="159dp"
        android:layout_height="114dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="#241111"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/recipies_button_text"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/shoppingListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showProductListButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shoppingListButton"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="159dp"
        android:layout_height="114dp"
        android:layout_marginEnd="20dp"
        android:background="#241111"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/shopping_list_button"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/addRecipeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showMenuButton"
        app:layout_constraintTop_toBottomOf="@+id/showRecipesButton"
        app:layout_constraintVertical_bias="0.327" />

    <Button
        android:id="@+id/addRecipeButton"
        style="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_width="159dp"
        android:layout_height="114dp"
        android:layout_marginEnd="20dp"
        android:background="#241111"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/add_recipe_button"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/deleteProductsButton"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListButton"
        app:layout_constraintVertical_bias="0.855" />
</android.support.constraint.ConstraintLayout>